FRONT-END VERSION

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
           </div>
           <div class="grid">
             <% season.episodes.forEach((episode) => { %>
-              <div class="card card-episode">
+              <div class="card card-episode" %>
                 <img src="<%= episode.image.original %>" alt="Narcos Season 1 Cover" class="card-cover">
                 <div class="card-content">
                     <span>Episode <%= episode.number %> </span>
